<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_article_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/write_article_scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/user_article_inner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/attach_image_button_message" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/article_image"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:adjustViewBounds="true"
                android:contentDescription="@string/user_article_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_article_title"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/article_title_hint"
                    android:inputType="textPersonName" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_article_description"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/article_description_hint"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_article_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_article_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/article_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit_article_button_message" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</com.google.android.material.circularreveal.CircularRevealFrameLayout>