<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/login_scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/login_inner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/app_logo"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:contentDescription="@string/login_activity_app_logo_description"
                android:src="@drawable/app_logo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/login_button_message"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/signup_button_message"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/guest_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/guest_button_message"
                android:textSize="20sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</com.google.android.material.circularreveal.CircularRevealFrameLayout>