<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/profile_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/profile_icon_description"
                    android:src="@drawable/profile_icon1" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="50dp"
                    android:text="@string/username"
                    android:textSize="30sp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/edit_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="50dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/edit"
                    android:layout_gravity="center"
                    android:contentDescription="@string/edit_profile_button_description"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_description"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="#CAF1FF"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/friends_and_followings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/friendlist_card"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="34dp"
                    app:cardElevation="50dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/searched_friends_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/blue3"
                        android:gravity="center"
                        android:text="@string/friend_list_button_message"
                        android:textSize="30sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/profile_tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/profile_tab_description" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/profile_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</FrameLayout>